<resources>
    <string name="app_name">Krushi_Project</string>

    <string-array name="role_options">
        <item>Admin</item>
        <item>Employee</item>
    </string-array>
    <string name="title_activity_piggy_bank">piggyBankActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_employee">Employee</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_leave">Leave</string>
    <string name="menu_salary">Salary</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_employee_navigation">EmployeeNavigationActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>